--- a/css/styles.css
+++ b/css/styles.css
@@ -61,14 +61,19 @@ body{
     transform: translateY(0);
 }
 
+section{
+    width: 90%;
+    margin: 0 auto;
+}
 section form{
+    width: 100%;
     display: flex;
     gap: 0 0;
     margin-bottom: 0.5rem;
 }
 section form input{
     padding: 0.5rem 1.5rem;
-    width: 20rem;
+    width: 100%;
     height: 2rem;
     border: 0;
     outline: 0;
